--- a/cmd/web-app/templates/content/signup-step1.gohtml
+++ b/cmd/web-app/templates/content/signup-step1.gohtml
@@ -15,7 +15,9 @@
                         <div class="p-5">
                             {{ template "app-flashes" . }}
                             <div class="text-center">
-                                <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
+                                <h1 class="h4 text-gray-900 mb-4">Student Registration!</h1>
+                                <p class="lead">If you are a teacher,
+                                 <a href="https://forms.gle/xgnAREA3fByZYKuc6" target="_blank">Apply here</a></p>
                             </div>
                             {{ template "validation-error" . }}
                             <hr/>
