--- a/cmd/web-app/templates/partials/app-topbar.tmpl
+++ b/cmd/web-app/templates/partials/app-topbar.tmpl
@@ -220,10 +220,10 @@
 
         <ul class="navbar-nav ml-auto unauthenicated">
             <li class="nav-item">
-                <a class="nav-link" href="/signup">Create Account</a>
+                <a class="nav-link" href="/signup">Student Registration</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/signup">Apply as Teacher</a>
+                <a class="nav-link" href="https://forms.gle/xgnAREA3fByZYKuc6" target="_blank">Apply as Teacher</a>
             </li>
 
             <div class="topbar-divider d-none d-sm-block"></div>
