--- a/cmd/web-app/templates/partials/site-footer.tmpl
+++ b/cmd/web-app/templates/partials/site-footer.tmpl
@@ -27,7 +27,7 @@
             <li><a class="p-2 text-white" href="/">Home</a></li>
             <li><a class="p-2 text-white" href="/pricing">Pricing</a></li>
             <li><a class="p-2 text-white" href="/support">Support</a></li>
-            <li><a class="p-2 text-white" href="https://forms.gle/xgnAREA3fByZYKuc6" target="_blank">Career</a></li>
+            <li><a class="p-2 text-white" href="https://forms.gle/xgnAREA3fByZYKuc6" target="_blank">Apply as Teacher</a></li>
           </ul>
         </div>
       </div>
