--- a/cmd/web-app/templates/partials/app-sidebar.tmpl
+++ b/cmd/web-app/templates/partials/app-sidebar.tmpl
@@ -4,10 +4,7 @@
 
         <!-- Sidebar - Brand -->
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
-            <div class="sidebar-brand-icon rotate-n-15">
-                <i class="fas fa-dragon"></i>
-            </div>
-            <div class="sidebar-brand-text mx-3">Remote School</div>
+        <img alt="REMOTE SCHOOL" class="logo" style="height:60px;" src="{{ SiteAssetUrl "/images/remote-school-logo.png" }}">
         </a>
  
         {{ if HasAuth $._Ctx }}
