--- a/cmd/web-app/templates/partials/site-topbar.tmpl
+++ b/cmd/web-app/templates/partials/site-topbar.tmpl
@@ -17,7 +17,10 @@
         </header>
         <nav class="navbar navbar-expand-lg navbar-dark mx-background-top-linear">
             <div class="container">
-            <a class="navbar-brand" href="/" style="text-transform: uppercase;"> REMOTE SCHOOL</a>
+            <a class="navbar-brand" href="/" style="text-transform: uppercase;"> 
+                <img alt="REMOTE SCHOOL" class="logo" style="height:60px;" 
+                    src="{{ SiteAssetUrl "/images/remote-school-logo.png" }}">
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
