Replace tutoring with teaching/learning

--- a/cmd/web-app/templates/content/site-index.gohtml
+++ b/cmd/web-app/templates/content/site-index.gohtml
@@ -1,6 +1,6 @@
-{{define "title"}}Online interactive tutoring platform{{end}}
+{{define "title"}}Online interactive learning platform{{end}}
 {{define "description"}}Cloud-based learning platform that offers safe and
-affordable interactive online private tutoring.{{end}}
+affordable interactive online private teaching and learning.{{end}}
 {{define "homeActive"}}active{{end}}
 {{define "style"}}
 <style>
@@ -52,7 +52,7 @@ affordable interactive online private tutoring.{{end}}
                             </div>
                             <div>
                                 <h2 class="d-none d-md-block">Better Grades Guaranteed.</h2>
-                                <p>Enjoy world-class tutoring from the comfort of your home.</p>
+                                <p>Enjoy world-class teaching from the comfort of your home.</p>
                                 <form method="post" action="signup">
                                     <div class="form-row">
                                         <div class="col-md-4 col-sm-12 mt-3">
