--- a/cmd/web-app/templates/content/site-pricing.gohtml
+++ b/cmd/web-app/templates/content/site-pricing.gohtml
@@ -1,5 +1,5 @@
 {{define "title"}}Pricing{{end}}
-{{define "description"}}Price of online tutoring.{{end}}
+{{define "description"}}Price of online teaching and learning platform.{{end}}
 {{define "pricingActive"}}active{{end}}
 {{define "style"}}
 
