--- a/cmd/web-app/templates/layouts/base.gohtml
+++ b/cmd/web-app/templates/layouts/base.gohtml
@@ -9,7 +9,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Remote online interactive tutoring platform.">
+        <meta name="description" content="Remote online interactive teaching and learning platform.">
         <meta name="author" content="Merry World Media">
 
         <link rel="icon" type="image/png" sizes="16x16" href="{{ SiteAssetUrl "/images/remote-school-icon.png" }}">
