--- a/cmd/web-app/templates/partials/app-sidebar.tmpl
+++ b/cmd/web-app/templates/partials/app-sidebar.tmpl
@@ -68,17 +68,11 @@
                     <span>My Subscriptions</span></a>
             </li>
 
-            <li class='nav-item {{block "subscriptionsActive" .}}{{end}}'>
-                <a class="nav-link" href="/deposits">
-                    <i class="fas fa-fw fa-layer-group"></i>
-                    <span>My Deposit</span></a>
-            </li>
-
-            <li class="nav-item {{block "lessonsActive" .}}{{end}}">
+            <!-- <li class="nav-item {{block "lessonsActive" .}}{{end}}">
                 <a class="nav-link" href="/lessons">
                     <i class="fas fa-fw fa-layer-group"></i>
                     <span>Lessons</span></a>
-            </li>
+            </li> -->
             {{end}}
 
         {{ end }}
