--- a/cmd/web-app/templates/content/admin-deposits-view.gohtml
+++ b/cmd/web-app/templates/content/admin-deposits-view.gohtml
@@ -8,7 +8,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{{ .urlDepositsIndex }}">Deposits</a></li>
-            <li class="breadcrumb-item"><a href="{{ .urlDepositsView }}">{{ .deposit.Value }}</a></li>
+            <li class="breadcrumb-item"><a href="{{ .urlDepositsView }}">{{ .deposit.Amount }}</a></li>
             <li class="breadcrumb-item active" aria-current="page">View</li>
         </ol>
     </nav>
@@ -24,11 +24,17 @@
                 <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                     <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
                 </a>
-                <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink" x-placement="bottom-end" style="position: absolute; transform: translate3d(-156px, 19px, 0px); top: 0px; left: 0px; will-change: transform;">
+                <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink" x-placement="bottom-end" 
+                style="position: absolute; transform: translate3d(-156px, 19px, 0px); top: 0px; left: 0px; will-change: transform;">
                     <div class="dropdown-header">Actions</div>
                     {{ if HasRole $._Ctx "admin" }}
                         <form method="post"><input type="hidden" name="action" value="archive" />
                         <input type="submit" value="Delete Deposit" class="dropdown-item"></form>
+                        {{ if eq .deposit.Status "paid" }}
+
+                        <form method="post"><input type="hidden" name="action" value="subscribe" />
+                        <input type="submit" value="Subscribe" class="dropdown-item"></form>
+                        {{ end }}
                     {{ end }}
                 </div>
             </div>
@@ -39,6 +45,10 @@
                     <p>
                         <small>Amount</small><br/>
                         <b>{{ .deposit.Amount }}</b>
+                    </p>
+                    <p>
+                        <small>Status</small><br/>
+                        <b>{{ .deposit.Status }}</b>
                     </p>
                 </div>
             </div>
