--- a/cmd/web-app/templates/content/users-update.gohtml
+++ b/cmd/web-app/templates/content/users-update.gohtml
@@ -49,6 +49,13 @@
                             {{template "invalid-feedback" dict "fieldName" "UserUpdateRequest.Email" "validationDefaults" $.userValidationDefaults "validationErrors" $.validationErrors }}
                         </div>
                         <div class="form-group">
+                            <label for="inputEmail">Phone Number</label>
+                            <input type="text"
+                                   class="form-control {{ ValidationFieldClass $.validationErrors "UserUpdateRequest.Phone" }}"
+                                   placeholder="enter phone number" name="Email" value="{{ .form.Phone }}" required>
+                            {{template "invalid-feedback" dict "fieldName" "UserUpdateRequest.Phone" "validationDefaults" $.userValidationDefaults "validationErrors" $.validationErrors }}
+                        </div>
+                        <div class="form-group">
                             <label for="inputTimezone">Timezone</label>
                             <select class="form-control {{ ValidationFieldClass $.validationErrors "UserUpdateRequest.Timezone" }}" name="Timezone">
                                 <option value="">Not set</option>
