--- a/cmd/web-app/templates/content/site-pricing.gohtml
+++ b/cmd/web-app/templates/content/site-pricing.gohtml
@@ -20,16 +20,48 @@
                     <h4 class="my-0 font-weight-normal">One Subject</h4>
                 </div>
                 <div class="card-body">
-                    <h1 class="card-title pricing-card-title">₦12,000 <small class="text-muted">/ mo</small></h1>
+                    <h1 class="card-title pricing-card-title">₦8,000 <small class="text-muted">/ mo</small></h1>
                     <ul class="list-unstyled mt-3 mb-4">
                         <li>Access to our interactive class</li>
                         <li>Access to past video lectures</li>
                         <li>Email support</li>
                         <li>Whatsapp support</li>
                     </ul>
-                    <a class="btn btn-lg btn-block btn-danger" href="/signup">Sign up now</a>
+                    <a class="btn btn-lg btn-block btn-primary" href="/signup">Sign up now</a>
                 </div>
             </div>
+            <div class="card mb-4 shadow-sm">
+                <div class="card-header">
+                    <h4 class="my-0 font-weight-normal">Three Subjects <small style="font-size:10px; color:red">(Recommended)</small></h4>
+                </div>
+                <div class="card-body">
+                    <h1 class="card-title pricing-card-title">₦20,000 <small class="text-muted">/ mo</small></h1>
+                    <ul class="list-unstyled mt-3 mb-4">
+                        <li>Access to our interactive class</li>
+                        <li>Access to past video lectures</li>
+                        <li>Email support</li>
+                        <li>Whatsapp support</li>
+                    </ul>
+                    <a class="btn btn-lg btn-block btn-danger" href="/signup?c=3">Sign up now</a>
+                </div>
+            </div>
+
+            <div class="card mb-4 shadow-sm">
+                <div class="card-header">
+                    <h4 class="my-0 font-weight-normal">Five Subject</h4>
+                </div>
+                <div class="card-body">
+                    <h1 class="card-title pricing-card-title">₦30,000 <small class="text-muted">/ mo</small></h1>
+                    <ul class="list-unstyled mt-3 mb-4">
+                        <li>Access to our interactive class</li>
+                        <li>Access to past video lectures</li>
+                        <li>Email support</li>
+                        <li>Whatsapp support</li>
+                    </ul>
+                    <a class="btn btn-lg btn-block btn-primary" href="/signup?c=5">Sign up now</a>
+                </div>
+            </div>
+        
         </div>
         <!-- /End the Pricing Cards -->
     </div>
