multiple class sub

--- a/cmd/web-app/templates/partials/site-footer.tmpl
+++ b/cmd/web-app/templates/partials/site-footer.tmpl
@@ -37,7 +37,7 @@
       <div class="row">
         <div class="col-md-8 col-sm-6 col-xs-12">
           <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by 
-       <a href="#">Merry World</a>.
+       <a href="#">Merry World (BN 2662048)</a>.
           </p>
         </div>
 
