--- a/cmd/web-app/templates/content/root-dashboard-students.gohtml
+++ b/cmd/web-app/templates/content/root-dashboard-students.gohtml
@@ -30,41 +30,34 @@
             <span class="naira">30,000</span> for five subjects per month
           </p>
           <div class="form-row">
-            <div class="col-md-4 col-sm-12 mt-3">
+            <div class="col-md-3 col-sm-12 mt-3">
               <select data-target="payment.class" class="form-control">
-                <option>Select Class</option>
+                <option value="">Select Class</option>
                 {{ range $class := .classes }}
                 <option value="{{ $class.ID }}">{{ $class.Name }}</option>
                 {{ end }}
               </select>
             </div>
-            <div class="col-md-4 col-sm-12 mt-3">
+            <div class="col-md-3 col-sm-12 mt-3">
               <select data-target="payment.subject" class="form-control">
-                <option>Select Subject</option>
+                <option value="">Select Subject</option>
                 {{ range $subject := .subjects }}
                 <option value="{{ $subject.ID }}">{{ $subject.Name }}</option>
                 {{ end }}
               </select>
             </div>
-            <div class="col-md-4 col-sm-12 mt-3">
+            <div class="col-md-3 col-sm-12 mt-3">
               <select data-target="payment.period" class="form-control">
-                <option>Select Period</option>
+                <option value="">Select Period</option>
                 {{ range $period := .periods }}
                 <option value="{{ $period.ID }}">{{ $period }}</option>
                 {{ end }}
               </select>
             </div>
-            <div class="col-md-4 offset-4 col-sm-12 mt-3">
+           
+            <div class="col-md-3 col-sm-12 mt-3">
               <button
-                class="btn btn-danger btn-lg btn-block"
-                data-action="click->payment#initiate"
-              >
-                Make Payment
-              </button>
-            </div>
-            <div class="col d-none">
-              <button
-                data-action="click->sale#addToList"
+                data-action="click->payment#addToList"
                 class="btn btn-primary"
               >
                 Add To List
@@ -86,17 +79,18 @@
               <tbody data-target="payment.listTbl"></tbody>
               <tfoot>
                 <tr>
-                  <th colspan="5" class="text-right font-weight">Total Amount</th>
+                  <th colspan="3" class="text-right font-weight">Total Amount</th>
                   <td class="text-right">
                     <span
                       class="font-weight-bolder"
-                      data-target="sale.cartTotal"
+                      data-target="payment.cartTotal"
                     ></span>
+                    <p>Saving <span style="color: brown;" data-target="payment.savings"></span></p>
                   </td>
                 </tr>
               </tfoot>
             </table>
-            <template data-target="sale.itemTemplate">
+            <template data-target="payment.itemTemplate">
               <tr>
                 <td class="text-right"></td>
                 <td></td>
@@ -106,9 +100,20 @@
                 <td></td>
               </tr>
             </template>
+            
+            <div class="col-md-4 offset-4 col-sm-12 mt-3">
+              <button
+                class="btn btn-danger btn-lg btn-block"
+                data-action="click->payment#subscribe"
+              >
+                Make Payment
+              </button>
+            </div>
 
           </div>
         </div>
+
+
         {{ if gt (len .subscriptions) 0 }}
         <table class="table">
           <tr>
