--- a/cmd/web-app/templates/content/root-dashboard-students.gohtml
+++ b/cmd/web-app/templates/content/root-dashboard-students.gohtml
@@ -8,6 +8,13 @@
   <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
 </div>
 
+{{ if .isNew}}
+<div class="alert alert-success mt-2 mb-3" role="alert">
+  Congratulations! Your free classes are been created. 
+  We will send you an email/SMS with further instructions on how to connect to the class
+</div>
+{{ end }}
+
 <div class="row">
   <div class="col">
     <div class="card">
@@ -25,9 +32,9 @@
           <hr class="my-4" />
           <p>
             Click on the button below to make payment. Subscription cost is
-            <span class="naira">8,000</span> for one subject,
-            <span class="naira">20,000</span> for three subjects,
-            <span class="naira">30,000</span> for five subjects per month
+            <span class="naira">5,000</span> for one subject,
+            <span class="naira">12,000</span> for three subjects,
+            <span class="naira">15,000</span> for five subjects per month
           </p>
           <div class="form-row">
             <div class="col-md-3 col-sm-12 mt-3">
