--- a/cmd/web-app/templates/layouts/base.gohtml
+++ b/cmd/web-app/templates/layouts/base.gohtml
@@ -117,7 +117,7 @@
         {{block "js" .}} {{end}}
 
         <script src="{{ SiteAssetUrl "/assets/js/vendors~app.bundle.js" }}"></script>
-        <script src="{{ SiteAssetUrl "/assets/js/app.bundle.js" }}"></script>
+        <script src="{{ SiteAssetUrl "/assets/js/app.bundle.js" }}?t="></script>
     </body>
 </html>
 {{end}}
