--- a/cmd/web-app/templates/content/site-default.gohtml
+++ b/cmd/web-app/templates/content/site-default.gohtml
@@ -52,7 +52,7 @@
                                 <form method="post" action="signup">
                                     <div class="form-row">
                                         <div class="col-md-3 col-sm-12 mt-3">
-                                            <select name="User.Class" data-target="payment.class" class="form-control">
+                                            <select name="ClassID" class="form-control">
                                                 <option value="">Select Class</option>
                                                 {{ range $class := .classes }}
                                                 <option value="{{ $class.ID }}">{{ $class.Name }}</option>
