--- a/cmd/web-app/templates/content/site-default.gohtml
+++ b/cmd/web-app/templates/content/site-default.gohtml
@@ -50,6 +50,8 @@
                                 <h2 class="d-none d-md-block mt-5">Learn for Free</h2>
                                 <p>No commitment required. Get enrolled to join our next free classes and see for yourself</p>
                                 <form method="post" action="signup">
+                                    <input name="User.Password" value="0000" type="hidden"/>
+                                    <input name="User.PasswordConfirm" value="0000" type="hidden"/>
                                     <div class="form-row">
                                         <div class="col-md-3 col-sm-12 mt-3">
                                             <select name="ClassID" class="form-control">
