--- a/cmd/web-app/templates/content/signup-step1.gohtml
+++ b/cmd/web-app/templates/content/signup-step1.gohtml
@@ -41,9 +41,9 @@
                                     <div class="col-md-4 col-sm-12">
                                         <select data-target="form.ClassID" class="form-control">
                                             <option value="">Select Class</option>
-                                            {{ $classID =  .form.ClassID }}
+                                            {{ $classID =  $.form.ClassID }}
                                             {{ range $class := .classes }}
-                                            <option value="{{ $class.ID }}">{{ $class.Name }}</option>
+                                            <option value="{{ $class.ID }}" {{ if eq $classID $class.ID }}selected{{ end }}>{{ $class.Name }}</option>
                                             {{ end }}
                                         </select>
                                         {{template "invalid-feedback" dict "fieldName" "ClassID" "validationDefaults" $.validationDefaults "validationErrors" $.validationErrors }}
