--- a/cmd/web-app/templates/partials/datatable.tmpl
+++ b/cmd/web-app/templates/partials/datatable.tmpl
@@ -25,6 +25,9 @@
     <script>
         $(document).ready(function() {
             var dtbl = $('#dataTable').DataTable( {
+                buttons: [
+                    'copy', 'csv', 'excel', 'pdf', 'print'
+                ]
                 serverSide: true,
                 ordering: true,
                 searching: true,
