--- a/cmd/web-app/templates/content/admin-subscriptions-index.gohtml
+++ b/cmd/web-app/templates/content/admin-subscriptions-index.gohtml
@@ -15,6 +15,8 @@
         {{ if HasRole $._Ctx "admin" }}
             <a href="{{ .urlSubscriptionsCreate }}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
                 <i class="fas fa-folder-plus fa-sm text-white-50 mr-1"></i>Create Subscriptions</a>
+            <a href="{{ .urlSubscriptionsDownload }}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+                <i class="fas fa-folder-plus fa-sm text-white-50 mr-1"></i>Download</a>
         {{ end }}
     </div>
 
