js controller block

--- a/cmd/web-app/templates/content/dtox-index.html
+++ b/cmd/web-app/templates/content/dtox-index.html
@@ -380,3 +380,5 @@ affordable interactive online private teaching and learning.{{end}}
 <!-- /pricing -->
 
 {{ end }}
+
+{{ define "js-controller"}}root{{ end }}
