--- a/cmd/web-app/templates/layouts/dtox.html
+++ b/cmd/web-app/templates/layouts/dtox.html
@@ -62,7 +62,7 @@
   <!-- End Facebook Pixel Code -->
 </head>
 
-<body>
+<body data-controller='{{ block "js-controller" . }}{{ end }}'>
   
 
 <!-- navigation -->
